You can see something!

--- a/Renderer/CMakeLists.txt
+++ b/Renderer/CMakeLists.txt
@@ -5,19 +5,20 @@ project(Renderer)
 find_package(OpenGL REQUIRED)
 find_package(glad CONFIG REQUIRED)
 find_package(glm CONFIG REQUIRED)
-find_package(assimp CONFIG REQUIRED)
+# find_package(assimp CONFIG REQUIRED)
 
 add_library(${PROJECT_NAME}
-    Renderer.cpp
-    ShaderProgram.cpp
-    Texture.cpp
+Renderer.cpp
+ShaderProgram.cpp
+GraphicBuffer.cpp
+Texture.cpp
 )
 
 target_link_libraries(${PROJECT_NAME}
 PRIVATE
     Utils
     glad::glad
-    assimp::assimp
+    # assimp::assimp
     glm
 )
 
@@ -27,10 +28,10 @@ add_dependencies(${PROJECT_NAME}
 
 target_compile_definitions(${PROJECT_NAME}
 PRIVATE
-    SHADERS_SOURCE_DIR="${PROJECT_SOURCE_DIR}/Shaders"
+SHADERS_SOURCE_DIR="${PROJECT_SOURCE_DIR}/Shaders"
 )
 
 target_include_directories(${PROJECT_NAME}
 PUBLIC
-    .
+.
 )
