--- a/Utils/CMakeLists.txt
+++ b/Utils/CMakeLists.txt
@@ -2,11 +2,9 @@ cmake_minimum_required(VERSION 3.9)
 
 project(Utils)
 
-add_library(${PROJECT_NAME}
-    INTERFACE
-)
+add_library(${PROJECT_NAME} INTERFACE)
 
 target_include_directories(${PROJECT_NAME}
 INTERFACE
-    ${PROJECT_SOURCE_DIR}
+    .
 )
