I changed everything... hopefully for the better.

--- a/Renderer/CMakeLists.txt
+++ b/Renderer/CMakeLists.txt
@@ -5,20 +5,23 @@ project(Renderer)
 find_package(OpenGL REQUIRED)
 find_package(glad CONFIG REQUIRED)
 find_package(glm CONFIG REQUIRED)
-# find_package(assimp CONFIG REQUIRED)
+find_package(assimp CONFIG REQUIRED)
 
 add_library(${PROJECT_NAME}
-Renderer.cpp
+# Renderer.cpp
 ShaderProgram.cpp
 GraphicBuffer.cpp
 Texture.cpp
+TextureProgram.cpp
+Contour/Program.cpp
+Transform.cpp
 )
 
 target_link_libraries(${PROJECT_NAME}
 PRIVATE
     Utils
     glad::glad
-    # assimp::assimp
+    assimp::assimp
     glm
 )
 
@@ -28,7 +31,8 @@ add_dependencies(${PROJECT_NAME}
 
 target_compile_definitions(${PROJECT_NAME}
 PRIVATE
-SHADERS_SOURCE_DIR="${PROJECT_SOURCE_DIR}/Shaders"
+    CONTOUR_PROGRAM="${PROJECT_SOURCE_DIR}/Contour"
+    SHADERS_SOURCE_DIR="${PROJECT_SOURCE_DIR}/Shaders"
 )
 
 target_include_directories(${PROJECT_NAME}
