--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -36,6 +36,16 @@
         "xstring": "cpp",
         "xtr1common": "cpp",
         "xutility": "cpp",
-        "vector": "cpp"
+        "vector": "cpp",
+        "array": "cpp",
+        "atomic": "cpp",
+        "cctype": "cpp",
+        "compare": "cpp",
+        "fstream": "cpp",
+        "iterator": "cpp",
+        "map": "cpp",
+        "numeric": "cpp",
+        "string": "cpp",
+        "xtree": "cpp"
     }
 }
