--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,4 +39,5 @@ set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -Wall")
 
 add_subdirectory(Renderer)
 add_subdirectory(Utils)
+add_subdirectory(Assets)
 add_subdirectory(test)
