moved stuff a little - hopefully it is better

--- a/Renderer/CMakeLists.txt
+++ b/Renderer/CMakeLists.txt
@@ -8,26 +8,33 @@ find_package(glm CONFIG REQUIRED)
 find_package(Assimp CONFIG REQUIRED)
 
 add_library(${PROJECT_NAME}
-# Renderer.cpp
-ShaderProgram.cpp
-GraphicBuffer.cpp
-Texture.cpp
-Node.cpp
-TextureProgram.cpp
-Contour/Program.cpp
-Transform.cpp
+    GraphicBuffer.cpp
 )
 
 target_link_libraries(${PROJECT_NAME}
-PRIVATE
-Utils
-glad::glad
-assimp::assimp
-glm
+PUBLIC
+    Utils
+    glad::glad
+    assimp::assimp
+    glm
+    Renderer_DebugUtils_TextureProgram
+    Renderer_Camera
+    Renderer_Node
+    Renderer_VertexData
+    Renderer_ShaderProgram
+    Renderer_Contour
+    Renderer_Texture
 )
 
 add_dependencies(${PROJECT_NAME}
     Utils
+    Renderer_DebugUtils_TextureProgram
+    Renderer_Camera
+    Renderer_Node
+    Renderer_VertexData
+    Renderer_ShaderProgram
+    Renderer_Contour
+    Renderer_Texture
 )
 
 target_compile_definitions(${PROJECT_NAME}
@@ -40,3 +47,11 @@ target_include_directories(${PROJECT_NAME}
 PUBLIC
 .
 )
+
+add_subdirectory(Contour)
+add_subdirectory(DebugUtils)
+add_subdirectory(Camera)
+add_subdirectory(Node)
+add_subdirectory(VertexData)
+add_subdirectory(ShaderProgram)
+add_subdirectory(Texture)
