--- a/Renderer/NoIdeaHowToCallItYet/CMakeLists.txt
+++ b/Renderer/NoIdeaHowToCallItYet/CMakeLists.txt
@@ -3,6 +3,7 @@ cmake_minimum_required(VERSION 3.9)
 project(Renderer)
 
 find_package(glad CONFIG REQUIRED)
+find_package(glm CONFIG REQUIRED)
 
 add_library(${PROJECT_NAME}
     GraphicBuffer.cpp
@@ -12,6 +13,7 @@ target_link_libraries(${PROJECT_NAME}
 PUBLIC
     Utils
     glad::glad
+    glm
     Renderer_Node
     Renderer_Contour
 )
