--- a/Renderer/CMakeLists.txt
+++ b/Renderer/CMakeLists.txt
@@ -2,6 +2,7 @@ cmake_minimum_required(VERSION 3.9)
 
 add_subdirectory(NoIdeaHowToCallItYet)
 add_subdirectory(Texture)
+add_subdirectory(EdgeDetector)
 add_subdirectory(Contour)
 add_subdirectory(DebugUtils)
 add_subdirectory(Camera)
