Got some (ugly...) shadow map!

--- a/Renderer/CMakeLists.txt
+++ b/Renderer/CMakeLists.txt
@@ -3,10 +3,11 @@ cmake_minimum_required(VERSION 3.9)
 add_subdirectory(NoIdeaHowToCallItYet)
 add_subdirectory(Texture)
 add_subdirectory(EdgeDetector)
+add_subdirectory(Common)
+add_subdirectory(Shadow)
 add_subdirectory(Contour)
 add_subdirectory(DebugUtils)
 add_subdirectory(Camera)
 add_subdirectory(Node)
-add_subdirectory(VertexData)
 add_subdirectory(ShaderProgram)
 add_subdirectory(Importer)
