--- a/Renderer/NoIdeaHowToCallItYet/CMakeLists.txt
+++ b/Renderer/NoIdeaHowToCallItYet/CMakeLists.txt
@@ -7,6 +7,7 @@ find_package(glm CONFIG REQUIRED)
 
 add_library(${PROJECT_NAME}
     GraphicBuffer.cpp
+    DepthBuffer.cpp
 )
 
 target_link_libraries(${PROJECT_NAME}
@@ -16,12 +17,16 @@ PUBLIC
     glm
     Renderer_Node
     Renderer_Contour
+    Renderer_Shadow
+    Renderer_DebugUtils_TextureProgram
 )
 
 add_dependencies(${PROJECT_NAME}
     Utils
     Renderer_Node
     Renderer_Contour
+    Renderer_Shadow
+    Renderer_DebugUtils_TextureProgram
 )
 
 target_include_directories(${PROJECT_NAME}
