--- a/Renderer/Common/CMakeLists.txt
+++ b/Renderer/Common/CMakeLists.txt
@@ -1,17 +1,19 @@
 cmake_minimum_required(VERSION 3.9)
 
-project(Renderer_VertexData)
+project(Renderer_Common)
 
 find_package(glad REQUIRED)
 
-add_library(${PROJECT_NAME} INTERFACE)
+add_library(${PROJECT_NAME}
+    Mesh.cpp
+)
 
 target_link_libraries(${PROJECT_NAME}
-INTERFACE
+PRIVATE
     glad::glad
 )
 
 target_include_directories(${PROJECT_NAME}
-INTERFACE
+PUBLIC
     .
 )
