--- a/Renderer/MappingProgram/CMakeLists.txt
+++ b/Renderer/MappingProgram/CMakeLists.txt
@@ -1,34 +1,41 @@
 cmake_minimum_required(VERSION 3.9)
 
-project(Renderer)
+project(Renderer_MappingProgram)
 
+find_package(OpenGL REQUIRED)
 find_package(glad CONFIG REQUIRED)
 find_package(glm CONFIG REQUIRED)
 
 add_library(${PROJECT_NAME}
-    GraphicBuffer.cpp
+    Program.cpp
 )
 
 target_link_libraries(${PROJECT_NAME}
-PUBLIC
+PRIVATE
     Utils
     glad::glad
     glm
     Renderer_Node
-    Renderer_Contour
-    Renderer_Shadow
-    Renderer_DebugUtils_TextureProgram
+PUBLIC
+    Renderer_ShaderProgram
+    Renderer_Common
+    Renderer_Texture
 )
 
 add_dependencies(${PROJECT_NAME}
     Utils
     Renderer_Node
-    Renderer_Contour
-    Renderer_Shadow
-    Renderer_DebugUtils_TextureProgram
+    Renderer_Texture
+    Renderer_Common
+    Renderer_ShaderProgram
+)
+
+target_compile_definitions(${PROJECT_NAME}
+PRIVATE
+    MAPPING_PROGRAM_DIR="${PROJECT_SOURCE_DIR}"
 )
 
 target_include_directories(${PROJECT_NAME}
 PUBLIC
-.
+    .
 )
