--- a/Renderer/CMakeLists.txt
+++ b/Renderer/CMakeLists.txt
@@ -4,10 +4,10 @@ add_subdirectory(Pipeline)
 add_subdirectory(Texture)
 add_subdirectory(EdgeDetector)
 add_subdirectory(Common)
-add_subdirectory(Shadow)
+# add_subdirectory(Shadow)
 add_subdirectory(MappingProgram)
 add_subdirectory(DebugUtils)
 add_subdirectory(Camera)
-add_subdirectory(Node)
+# add_subdirectory(Node)
 add_subdirectory(ShaderProgram)
 add_subdirectory(Importer)
