--- a/Renderer/Common/CMakeLists.txt
+++ b/Renderer/Common/CMakeLists.txt
@@ -5,7 +5,13 @@ project(Renderer_Common)
 find_package(glad REQUIRED)
 
 add_library(${PROJECT_NAME}
+    Camera.cpp
+    IdGenerator.cpp
     Mesh.cpp
+    Node.cpp
+    NodeLink.cpp
+    Scene.cpp
+    Skin.cpp
     DepthBuffer.cpp
     FramebufferBase.cpp
 )
