--- a/Renderer/Importer/CMakeLists.txt
+++ b/Renderer/Importer/CMakeLists.txt
@@ -13,13 +13,13 @@ target_link_libraries(${PROJECT_NAME}
 PRIVATE
     nlohmann_json::nlohmann_json
     glm
-    Renderer_Node
+    # Renderer_Node
     Renderer_Common
     Renderer_MappingProgram
 )
 
 add_dependencies(${PROJECT_NAME}
-    Renderer_Node
+    # Renderer_Node
     Renderer_Common
     Renderer_MappingProgram
 )
