New Node system renders something. ShadowsMaps not yet working.

--- a/Renderer/Pipeline/CMakeLists.txt
+++ b/Renderer/Pipeline/CMakeLists.txt
@@ -1,34 +1,35 @@
 cmake_minimum_required(VERSION 3.9)
 
-project(Renderer)
+project(Renderer_Pipeline)
 
 find_package(glad CONFIG REQUIRED)
 find_package(glm CONFIG REQUIRED)
 
 add_library(${PROJECT_NAME}
+    SceneDrawingManager.cpp
     GraphicBuffer.cpp
 )
 
 target_link_libraries(${PROJECT_NAME}
-PUBLIC
+PRIVATE
     Utils
-    glad::glad
     glm
-    # Renderer_Node
+    glad::glad
+    Renderer_Common
     Renderer_MappingProgram
-    # Renderer_Shadow
+    Renderer_EdgeDetector
     Renderer_DebugUtils_TextureProgram
 )
 
 add_dependencies(${PROJECT_NAME}
     Utils
-    # Renderer_Node
+    Renderer_Common
     Renderer_MappingProgram
-    # Renderer_Shadow
+    Renderer_EdgeDetector
     Renderer_DebugUtils_TextureProgram
 )
 
 target_include_directories(${PROJECT_NAME}
 PUBLIC
-.
+    .
 )
