--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -56,6 +56,8 @@
         "unordered_map": "cpp",
         "valarray": "cpp",
         "xhash": "cpp",
-        "optional": "cpp"
+        "optional": "cpp",
+        "set": "cpp",
+        "unordered_set": "cpp"
     }
 }
