Can't see anything, but should work soon.

--- a/Renderer/Pipeline/CMakeLists.txt
+++ b/Renderer/Pipeline/CMakeLists.txt
@@ -7,6 +7,9 @@ find_package(glm CONFIG REQUIRED)
 
 add_library(${PROJECT_NAME}
     SceneDrawingManager.cpp
+    TransformProcessor.cpp
+    SkinnedMeshDrawer.cpp
+    StaticMeshDrawer.cpp
     GraphicBuffer.cpp
 )
 
