Renaming, preparing for making SceneLighting.

--- a/Renderer/CMakeLists.txt
+++ b/Renderer/CMakeLists.txt
@@ -4,7 +4,7 @@ add_subdirectory(Pipeline)
 add_subdirectory(Texture)
 add_subdirectory(EdgeDetector)
 add_subdirectory(Common)
-# add_subdirectory(Shadow) // TODO
+# add_subdirectory(Lighting) // TODO
 add_subdirectory(MappingProgram)
 add_subdirectory(DebugUtils)
 add_subdirectory(Camera)
