BasicMaterial in place. next up probably writing a general purpose shader

--- a/Renderer/CMakeLists.txt
+++ b/Renderer/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.9)
 
 add_subdirectory(Pipeline)
-add_subdirectory(Texture)
+# add_subdirectory(BasicMaterial)
 add_subdirectory(EdgeDetector)
 add_subdirectory(Common)
 # add_subdirectory(Lighting) // TODO
