--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -58,6 +58,10 @@
         "xhash": "cpp",
         "optional": "cpp",
         "set": "cpp",
-        "unordered_set": "cpp"
+        "unordered_set": "cpp",
+        "bit": "cpp",
+        "ctime": "cpp",
+        "deque": "cpp",
+        "queue": "cpp"
     }
 }
