--- a/Renderer/ShadowMapping/CMakeLists.txt
+++ b/Renderer/ShadowMapping/CMakeLists.txt
@@ -1,13 +1,13 @@
 cmake_minimum_required(VERSION 3.9)
 
-project(Renderer_EdgeDetector)
+project(Renderer_ShadowMapping)
 
 find_package(OpenGL REQUIRED)
 find_package(glad CONFIG REQUIRED)
 find_package(glm CONFIG REQUIRED)
 
 add_library(${PROJECT_NAME}
-    Program.cpp
+    Directional.cpp
 )
 
 target_link_libraries(${PROJECT_NAME}
@@ -15,26 +15,23 @@ PRIVATE
     Utils
     glad::glad
     glm
-    
 PUBLIC
     Renderer_ShaderProgram
     Renderer_Common
-    
 )
 
 add_dependencies(${PROJECT_NAME}
     Utils
     Renderer_Common
-    
     Renderer_ShaderProgram
 )
 
 target_compile_definitions(${PROJECT_NAME}
 PRIVATE
-    EDGE_DETECTOR_PROGRAM_DIR="${PROJECT_SOURCE_DIR}"
+    DIRECTIONAL_SHADOW_PROGRAM_DIR="${PROJECT_SOURCE_DIR}"
 )
 
 target_include_directories(${PROJECT_NAME}
 PUBLIC
-    .
+    Directional
 )
