BasePass material management.

--- a/Renderer/CMakeLists.txt
+++ b/Renderer/CMakeLists.txt
@@ -1,9 +1,9 @@
 cmake_minimum_required(VERSION 3.9)
 
-add_subdirectory(Pipeline)
+add_subdirectory(SceneDrawing)
 # add_subdirectory(BasicMaterial)
 add_subdirectory(EdgeDetector)
-add_subdirectory(Common)
+add_subdirectory(Scene)
 # add_subdirectory(Lighting) // TODO
 add_subdirectory(MappingProgram)
 add_subdirectory(DebugUtils)
