Added dithering target. Got some basic dithering textures in.

--- a/Assets/CMakeLists.txt
+++ b/Assets/CMakeLists.txt
@@ -7,4 +7,8 @@ add_library(${PROJECT_NAME} INTERFACE)
 target_compile_definitions(${PROJECT_NAME}
 INTERFACE
     ASSETS_DIR="${PROJECT_SOURCE_DIR}"
+    ASSETS_TEXTURES_DIR="${PROJECT_SOURCE_DIR}/Textures"
+
+    ASSETS_TEXTURES_BLUE_NOISE_TEXTURE_PATH="${PROJECT_SOURCE_DIR}/Textures/BlueNoise128x128.png"
+    ASSETS_TEXTURES_WHITE_NOISE_TEXTURE_PATH="${PROJECT_SOURCE_DIR}/Textures/BlueNoise128x128.png"
 )
