--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -3,6 +3,7 @@ cmake_minimum_required(VERSION 3.9)
 project(test)
 
 find_package(glfw3 CONFIG REQUIRED)
+find_package(imgui CONFIG REQUIRED)
 
 add_executable(${PROJECT_NAME}
     main.cpp
@@ -14,14 +15,17 @@ add_dependencies(${PROJECT_NAME}
     Renderer_SceneDrawing
     Renderer_Scene
     Renderer_Importer
+    Renderer_UI
 )
 
 target_link_libraries(${PROJECT_NAME}
 PRIVATE
+    imgui::imgui
     glfw
     Assets
     Renderer_Utils
     Renderer_SceneDrawing
     Renderer_Scene
     Renderer_Importer
+    Renderer_UI
 )
