--- a/Renderer/CMakeLists.txt
+++ b/Renderer/CMakeLists.txt
@@ -4,4 +4,5 @@ add_subdirectory(Importer)
 add_subdirectory(Programs)
 add_subdirectory(Scene)
 add_subdirectory(SceneDrawing)
+add_subdirectory(UI)
 add_subdirectory(Utils)
