--- a/Renderer/Programs/CMakeLists.txt
+++ b/Renderer/Programs/CMakeLists.txt
@@ -3,3 +3,4 @@ cmake_minimum_required(VERSION 3.9)
 add_subdirectory(Base)
 add_subdirectory(DebugMeshProgram)
 add_subdirectory(TextureProgram)
+add_subdirectory(ShaderCompiler)
